/* ცნობილი არტ-დეკოს მიმდევრები */

--- a/არტ-დეკო.mw
+++ b/არტ-დეკო.mw
@@ -19,7 +19,28 @@
 *ცხოველური მოტივები და ფორმები; ტროპიკული ფოლიაჟი; ზიგურატი, კრისტალი; სტილიზებული შადრევნების მოტივები;
 *მანქანური ერის ტექნოლოგია, როგორიცაა [[რადიო]] და [[ცათამბჯენი]].
 
-==ცნობილი არტ-დეკოს მიმდევრები==
+==ცნობილი არტ-დეკოს პროექტები==
+[[Image:Carbon_jc01.jpg|right|156px|thumb|ჩიკაგოს კარბონისა და კარბიდის შენობა]]
+[[Image:Supreme Court of Canada.jpg|right|230px|thumb|ოტავას უზენაესი სასამართლოს შენობა]]
+[[Image:Nicanor reyes hall.jpg|right|thumb|230px|შორეული აღმოსავლეთის უნივერსიტეტის კამპუსი მანილაში]]
+[[Image:IMG 0175.JPG|thumb|right|230px|მშვიდობის სასტუმროს ჩრდილოეთის შენობა, შანჰაი, ჩინეთი]]
+*[[არგაილ ჰოტელი]], [[ლოს-ანჟელესი]], [[კალიფორნია]]
+*[[ემპაია სტეიტ ბილდინგი]]
+*[[კრაისლერ ბილდინგი]]
+*[[გოლდენ გეიტ ბრიჯი]]
+*[[ფიშერის შენობა]], [[დეტროიტი]], [[მიჩიგანი]]
+*[[პის ჰოტელ]], [[შანჰაი]]
+*[[ჰუვერ ბილდინგი]], პერივეილი, [[ლონდონი]]
+* [[რადიო სიტი მიუზიკ ჰოლი]]
+* [[მონრეალის უნივერსიტეტი]], ცენტრალური შენობა
+* [[კანადის უზენაესი სასამართლო]], [[ოტავა]]
+* [[მარინ ბილდინგი]], [[ვანკუვერი]]
+* [[არსენალის სტადიონი]], [[ლონდონი]]
+* [[ელთამ პალასი]], სამხრეთ-აღმ. ლონდონი
+*[[კარბონ ენდ კარბიდ ბილდინგი]] 
+*[[საუზ ბიჩი]], [[მაიამი]], [[ფლორიდა]].
+*[[30-ე ქუჩის სადგური]], [[ფილადელფია]]
+*[[შორეული აღმოსავლეთის უნივერსიტეტი]], [[მანილა]], [[ფილიპინები]]
 
 ==რესურსები ინტერნეტში==
 
