--- a/სოჭი_(მრავალმნიშვნელოვანი).mw
+++ b/სოჭი_(მრავალმნიშვნელოვანი).mw
@@ -1,4 +1,4 @@
-საკუთარი სახელი სოჭი შეიძლება ნიშნავდეს:
+საკუთარი სახელი '''სოჭი''' შეიძლება ნიშნავდეს:
 
 *[[სოჭი (ქალაქი)|სოჭი]] - ქალაქი შავი ზღვის პირას, ამჟამად რუსეთის ტერიტორიაზეა.
 *[[სოჭი (მცენარე)|სოჭი]] - კავკასიური ჯიშის წიწვოვანი ხე.
