--- a/ტრაპიზონი.mw
+++ b/ტრაპიზონი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Trabzon ili konumu.png|thumb|250px|ტრაბზონის პროვინცია თურქეთის რუქაზე]]
-'''ტრაბზონი''', ყოფილი '''ტრაპიზონი''' ან '''ტრაპეზუნდი''' (კლას. ბერძნ. Τραπεζοῦς, თანამ. ბერძ. Τραπεζούντα) ქალაქია შავი ზღვის სანაპიროზე ამჟამინდელი [[თურქეთი|თურქეთის]] ჩრდილო-აღმოსავლეთით; ტრაბზონის პროვინციის დედაქალაქი; ისტორიული [[ტრაპიზონის იმპერია|ტრაპიზონის იმპერიის]] დედაქალაქი. მდებარეობს [[ბათუმი|ბათუმიდან]] [[სტამბოლი|სტამბოლიკენ]] მიმავალ გზაზე და ისტორიულად მნიშვნელოვანი წერტილი იყო საერთაშორისო ვაჭრობისთვის. ქალაქის მოსახლეობა შეადგენს 214.949 ადამიანს (2000 ცენზი).
+'''ტრაბზონი''', ყოფილი '''ტრაპიზონი''' ან '''ტრაპეზუნდი''' (კლას. ბერძნ. Τραπεζοῦς, თანამ. ბერძ. Τραπεζούντα) ქალაქია [[შავი ზღვა|შავი ზღვის]] სანაპიროზე ამჟამინდელი [[თურქეთი|თურქეთის]] ჩრდილო-აღმოსავლეთით; ტრაბზონის პროვინციის დედაქალაქი; ისტორიული [[ტრაპიზონის იმპერია|ტრაპიზონის იმპერიის]] დედაქალაქი. მდებარეობს [[ბათუმი|ბათუმიდან]] [[სტამბოლი|სტამბოლიკენ]] მიმავალ გზაზე და ისტორიულად მნიშვნელოვანი წერტილი იყო საერთაშორისო ვაჭრობისთვის. ქალაქის მოსახლეობა შეადგენს 214.949 ადამიანს (2000 ცენზი).
 
 {{ესკიზი}}
 
