--- a/დიაოხი.mw
+++ b/დიაოხი.mw
@@ -7,4 +7,6 @@
 სიენი და ასია ებრძოდნენ [[ასურეთი|ასურეთის]] მეფეებს: [[ტიგლათფილესერ I]]-სა და [[სალმანასარ III]]-ს, ხოლო უტუფურსი [[ურარტუ|ურარტუს]] მეფეებს [[მენუა (ურარტუ)|მენუასა]] და [[არგიშთი I (ურარტუ)|არგიშთი I]]-ს. [[ძვ.წ. 755]] წლისათვის ურარტუს მიერ დასუსტებული დიაოხი დაიპყრო [[კოლხას სამეფო|კოლხას სამეფომ]]. ძვ.წ. VII საუკუნის I ნახევრიდან VI საუკუნის 90-იან წლებამდე არსებობდა დიაოხის ტრადიციათა მემკვიდრე [[სპერის სამეფო]].
 
 [[კატეგორია:დიაოხის სამეფო|*]]
+
+[[ca:Deiaena]]
 [[en:Diaokhi]]
