*Empty MediaWiki Message*

--- a/ასურეთი.mw
+++ b/ასურეთი.mw
@@ -1,4 +1,6 @@
-'''ასურეთი''' ადრე-ისტორიულ პერიოდში ზემო [[ტიგროსი|ტიგროსის]] რეგიონში მდებარე სახელმწიფოზე მიუთითებს, რომლის სახელი მისი დედაქალაქიდან [[აშური|აშურიდან]] მომდინარეობს. მოგვიანებით ასურეთის სამეფო მოიცავს ასევე [[მესოპოტამია|მესოპოტიმიის]] ჩრდილოეთ ნახევს (სამხრეთ ნახევარი [[ბაბილონია|ბაბილონიის]] იყო).
+'''ასურეთი''' ადრე-ისტორიულ პერიოდში ზემო [[ტიგროსი|ტიგროსის]] რეგიონში მდებარე სახელმწიფოზე მიუთითებს, რომლის სახელი მისი დედაქალაქიდან [[აშური|აშურიდან]] მომდინარეობს. მოგვიანებით ასურეთის სამეფო მოიცავს ასევე [[მესოპოტამია|მესოპოტამიის]] ჩრდილოეთ ნახევს (სამხრეთ ნახევარი [[ბაბილონია|ბაბილონიის]] იყო).
+
+
 
 {{ესკიზი}}
 
