*Empty MediaWiki Message*

--- a/ასურეთი.mw
+++ b/ასურეთი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ასურეთი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ასურეთი]]
+|}</small>
+
 '''ასურეთი''' ადრე-ისტორიულ პერიოდში ზემო [[ტიგროსი|ტიგროსის]] რეგიონში მდებარე სახელმწიფოზე მიუთითებს, რომლის სახელი მისი დედაქალაქიდან [[აშური|აშურიდან]] მომდინარეობს. მოგვიანებით ასურეთის სამეფო მოიცავს ასევე [[მესოპოტამია|მესოპოტამიის]] ჩრდილოეთ ნახევს (სამხრეთ ნახევარი [[ბაბილონია|ბაბილონიის]] იყო).
 
 
