*Empty MediaWiki Message*

--- a/ერნესტ_ჰემინგუეი.mw
+++ b/ერნესტ_ჰემინგუეი.mw
@@ -6,8 +6,14 @@
 ჰემინგუეის მიღებული აქვს [[პულიცერის პრიზი|პულიცერის პრემია]] (1953) და [[ნობელის პრემია]] ლიტერატურაში (1954) ნაწარმოებისთვის "მოხუცი და ზღვა". 61 წლის ასაკში სიცოცხლე თვითმკვლელობით დაასრულა 1961 წელს.
 
 {{ესკიზი}}
+კატეგორია:ამერიკელები
 [[კატეგორია:ამერიკელი მწერლები]]
 [[კატეგორია:ჟურნალისტები]]
+[[კატეგორია:ნობელის პრემია ლიტერატურის დარგში]]
+[[კატეგორია:დაბადებული  1899]]
+[[კატეგორია:გარდაცვლილი 1961]]
+
+
 
 [[ar:إرنست همنغواي]]
 [[bg:Ърнест Хемингуей]]
