--- a/ერნესტ_ჰემინგუეი.mw
+++ b/ერნესტ_ჰემინგუეი.mw
@@ -6,7 +6,7 @@
 ჰემინგუეის მიღებული აქვს [[პულიცერის პრიზი|პულიცერის პრემია]] (1953) და [[ნობელის პრემია]] ლიტერატურაში (1954) ნაწარმოებისთვის "მოხუცი და ზღვა". 61 წლის ასაკში სიცოცხლე თვითმკვლელობით დაასრულა 1961 წელს.
 
 {{ესკიზი}}
-კატეგორია:ამერიკელები
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მწერლები]]
 [[კატეგორია:ჟურნალისტები]]
 [[კატეგორია:ნობელის პრემია ლიტერატურის დარგში]]
