--- a/იზა_გიგოშვილი.mw
+++ b/იზა_გიგოშვილი.mw
@@ -1,5 +1,5 @@
-'''გიგოშვილი, იზა''' შალვას ასული (* [[16 თებერვალი]], [[1938]], [[თბილისი]]), [[ქართველები|ქართველი]] მსახიობი. საქართველოს სახალხო არტისტი ([[1981]]). [[1979]] მიენიჭა სსრკ სახელმწიფო პრემია. [[1963]] დაამთავრა საქართველოს  რუსთაველის სახელობის თეატრალური ინსტიტუტის სამსახიობო ფაკულტეტი. [[1963]]-[[1967]] იყო თბილისის [[რუსთაველის თეატრი|რუსთაველის თეატრის]] მსახიობი, [[1967]]-[[1969]] - [[მარჯანიშვილის თეატრი|მარჯანიშვილის თეატრისა]], [[1969]]-იდან კვლავ რუსთაველის თეატრშია. გიგოშვილის თამაში გამოირჩევა სინატიფით, პლასტიკით, მოხდენილობითა და გარდასახვის უნარით; შექმნა მომხიბლავი და გულწრფელობით აღსავსე თავგანწირულ, შეუპოვარ ქალთა სახეები:ძაბული ([[გამსახურდია, კონსტანტინე|კ. გამსახურდიას]] "მთვარის მოტაცება"), კაბილა ([[მიუსე, ალფრედ დე|ა. დე მიუსეს]] "სიყვარული სახუმარო არ არის"), ჰერმია ([[შექსპირი, უილიამ|უ. შექსპირის]] "ზაფხულის ღამის სიზმარი"), ქსენია ([[ლავრენიოვი, ბორის|ბ. ლავრენიოვის]] "რღვევა"), ნატო ([[ჩხაიძე, ალექსანდრე|ა. ჩხაიძის]] "ხიდი"), გრუშე ვაჩნაძე ([[ბრეხტი, ბერტოლტ|ბ. ბრეხტის]] "კავკასიური ცარცის წრე"), ზიტა ([[ლესინგი, გოტჰოლდ ეფრაიმ|გ. ლესინგის]] "ნათან ბრძენი"), შუშანიკი ([[იაკობ ცუერტაველი|ი. ცურტაველის]] "შუშანიკის მარტვილობა"), თამარი ([[გოლდონი, კარლო|კ. გოლდონის]] "მშვენიერი ქართველი ქალი") და სხვა.
+'''იზა შალვას ასული გიგოშვილი'''(* [[16 თებერვალი]], [[1938]], [[თბილისი]]), [[ქართველები|ქართველი]] მსახიობი. საქართველოს სახალხო არტისტი ([[1981]]). [[1979]] მიენიჭა სსრკ სახელმწიფო პრემია. [[1963]] დაამთავრა საქართველოს  რუსთაველის სახელობის თეატრალური ინსტიტუტის სამსახიობო ფაკულტეტი. [[1963]]-[[1967]] იყო თბილისის [[რუსთაველის სახელობის თეატრი|რუსთაველის სახელობის თეატრის]] მსახიობი, [[1967]]-[[1969]] - [[მარჯანიშვილის სახელობის თეატრი|მარჯანიშვილის სახელობის თეატრისა]], [[1969]]-იდან კვლავ რუსთაველის თეატრშია. გიგოშვილის თამაში გამოირჩევა სინატიფით, პლასტიკით, მოხდენილობითა და გარდასახვის უნარით; შექმნა მომხიბლავი და გულწრფელობით აღსავსე თავგანწირულ, შეუპოვარ ქალთა სახეები:ძაბული ([[გამსახურდია, კონსტანტინე|კ. გამსახურდიას]] "მთვარის მოტაცება"), კაბილა ([[მიუსე, ალფრედ დე|ა. დე მიუსეს]] "სიყვარული სახუმარო არ არის"), ჰერმია ([[შექსპირი, უილიამ|უ. შექსპირის]] "ზაფხულის ღამის სიზმარი"), ქსენია ([[ლავრენიოვი, ბორის|ბ. ლავრენიოვის]] "რღვევა"), ნატო ([[ჩხაიძე, ალექსანდრე|ა. ჩხაიძის]] "ხიდი"), გრუშე ვაჩნაძე ([[ბრეხტი, ბერტოლტ|ბ. ბრეხტის]] "კავკასიური ცარცის წრე"), ზიტა ([[ლესინგი, გოტჰოლდ ეფრაიმ|გ. ლესინგის]] "ნათან ბრძენი"), შუშანიკი ([[იაკობ ცურტაველი (ხუცესი)|ი. ცურტაველის]] "შუშანიკის მარტვილობა"), თამარი ([[გოლდონი, კარლო|კ. გოლდონის]] "მშვენიერი ქართველი ქალი") და სხვა.
 
 [[კატეგორია:ქართველები]]
-[[კატეგორია:მსახიობები]]
+[[კატეგორია:ქართველი მსახიობები]]
 [[კატეგორია:დაბადებული  1938]]
