*Empty MediaWiki Message*

--- a/პოლ_სეზანი.mw
+++ b/პოლ_სეზანი.mw
@@ -19,9 +19,12 @@
 ==გალერეა==
 
 {{ესკიზი}}
-
-[[კატეგორია:პოსტ-იმპრესიონისტი მხატვრები]]
 [[კატეგორია:ფრანგები]]
+[[კატეგორია:პოსტ-იმპრესიონისტი მხატვრები]]
+[[კატეგორია:ფრანგი მხატვრები]]
+[[კატეგორია:დაბადებული  1839]]
+[[კატეგორია:გარდაცვლილი 1906]]
+
 
 [[ar:بول سيزان]]
 [[ca:Paul Cézanne]]
