*Empty MediaWiki Message*

--- a/ატლანტის_ოკეანე.mw
+++ b/ატლანტის_ოკეანე.mw
@@ -1,18 +1,18 @@
-[[სურათი:Atlantic Ocean.png|thumb|300px|ატლანტიკის ოკეანე]]
-'''ატლანტიკის ოკეანე''' [[დედამიწა|დედამიწის]] სიდიდით მეორე წყლის აუზია და მისი ზედაპირის ერთ-მეხუთედს ფარავს. ოკეანის სახელი წარმოშობით [[ბერძნული მითოლოგია|ბერძნული მითოლოგიიდან]] არის და "ატლასის ზღვას" ნიშნავს.
+[[სურათი:Atlantic Ocean.png|thumb|300px|ატლანტის ოკეანე]]
+'''ატლანტის ოკეანე''' [[დედამიწა|დედამიწის]] სიდიდით მეორე წყლის აუზია და მისი ზედაპირის ერთ-მეხუთედს ფარავს. ოკეანის სახელი წარმოშობით [[ბერძნული მითოლოგია|ბერძნული მითოლოგიიდან]] არის და "ატლასის ზღვას" ნიშნავს.
 
-ოკეანეს წაგრძელებული ლათინური S-ის მაგვარი ფორმა აქვს, ჩრდილოეთი-სამხრეთის მიმართულებით არის გადაჭიმული და ეკვატორიული ურთიერთსაპირისპირო დინენებით 8° ჩრდილოეთის გრძედთან იყოფა ჩრდილო და სამხრეთ ატლანტიკებად. დასავლეთით ესაზღვრება ამერიკის კონტინენტებს, ხოლო აღმოსავლეთით -- ევროპასა და აფრიკას. [[წყნარი ოკეანე|წყნარ ოკეანეს]] უკავშირდება [[არქტიკის ოკეანე|არქტიკის ოკეანით]] ჩრდილოეთში და [[დრეიკის სრუტე|დრეიკის სრუტით]] სამხრეთში. ეს ორი ოკეანე ხელოვნურად ასევე დაკავშირებულია [[პანამის არხი|პანამის არხით]]. აღმოსავლეთით ატლანტიკისა და [[ინდოეთის ოკეანე|ინდოეთის ოკეანის]] გამყოფია 20° აღმოსავლეთის მერიდიანი, რომელიც აგულას კონცხიდან სამხრეთით ანტარქტიკისკენ მიერმართება. ატლანტიკას არქტიკის ოკეანისგან ჰყოფს ხაზები [[გრენლანდია|გრენლანდიასა]] და ჩრდილოდასავლეთ [[ისლანდია|ისლანდიას]] შორის, ჩრდილოაღმოსავლეთ ისლანდიასა და [[შპიცბერგენი|შპიცბერგენის]] უკიდურეს სამხრეთ წერტილებს შორის და შემდეგ ჩრდილოეთის კონცხსა და ჩრდილოეთ [[ნორვეგია|ნორვეგიას]] შორის.
+ოკეანეს წაგრძელებული ლათინური S-ის მაგვარი ფორმა აქვს, ჩრდილოეთი-სამხრეთის მიმართულებით არის გადაჭიმული და ეკვატორიული ურთიერთსაპირისპირო დინებით 8° ჩრდილოეთის გრძედთან იყოფა ჩრდილო და სამხრეთ ატლანტიკებად. დასავლეთით ესაზღვრება ამერიკის კონტინენტებს, ხოლო აღმოსავლეთით - ევროპასა და აფრიკას. [[წყნარი ოკეანე|წყნარ ოკეანეს]] უკავშირდება [[არქტიკის ოკეანე|არქტიკის ოკეანით]] ჩრდილოეთში და [[დრეიკის სრუტე|დრეიკის სრუტით]] სამხრეთში. ეს ორი ოკეანე ხელოვნურად ასევე დაკავშირებულია [[პანამის არხი|პანამის არხით]]. აღმოსავლეთით ატლანტიკისა და [[ინდოეთის ოკეანე|ინდოეთის ოკეანის]] გამყოფია 20° აღმოსავლეთის მერიდიანი, რომელიც აგულას კონცხიდან სამხრეთით ანტარქტიკისკენ მიერმართება. ატლანტიკას არქტიკის ოკეანისგან ჰყოფს ხაზები [[გრენლანდია|გრენლანდიასა]] და ჩრდილოდასავლეთ [[ისლანდია|ისლანდიას]] შორის, ჩრდილოაღმოსავლეთ ისლანდიასა და [[შპიცბერგენი|შპიცბერგენის]] უკიდურეს სამხრეთ წერტილებს შორის და შემდეგ ჩრდილოეთის კონცხსა და ჩრდილოეთ [[ნორვეგია|ნორვეგიას]] შორის.
 
-ფარავს რა დედამიწის ზედაპრისი დაახ. 20% ატლანტიკის ოკეანე სიდიდით ჩამორჩება წყნარ ოკეანეს. მიმდებარე ზღვების ჩათვლით მისი ფართობია 106.400.000 კვ. კმ; ზღვების გამოკლებით - 82.400.000 კვ. კმ. ხმელეთის ფართობი, რომლის მდენარეები ატლანტიკაში ჩაედინება ოთხჯერ აღემატება წყნარი და ინდოეთის ოკეანეებისას. ოკეანის მოცულობა ზღვებითურთ არის 354.700.000 კუბ. კმ., ზღვების გამოკლებით - 323.600.000 კუბ. კმ.
+ფარავს რა დედამიწის ზედაპრისი დაახ. 20% ატლანტის ოკეანე სიდიდით ჩამორჩება წყნარ ოკეანეს. მიმდებარე ზღვების ჩათვლით მისი ფართობია 106.400.000 კვ. კმ; ზღვების გამოკლებით - 82.400.000 კვ. კმ. ხმელეთის ფართობი, რომლის მდენარეები ატლანტიკაში ჩაედინება ოთხჯერ აღემატება წყნარი და ინდოეთის ოკეანეებისას. ოკეანის მოცულობა ზღვებითურთ არის 354.700.000 კუბ. კმ., ზღვების გამოკლებით - 323.600.000 კუბ. კმ.
 
-ატლანტიკის საშუალო სიღრმე ზღვებითურთ 3.332 მეტრია; ზღვების გარეშე - 3.926 მ. ყველაზე ღრმა 8.605 მეტრით პუერტო რიკოს ღრმულია. ატლანტიკის სიგანე მერყეობს 2.848 კმ-ით [[ბრაზილია|ბრაზილიასა]] და [[ლიბერია|ლიბერიას]] შორის 4.830 კმ-მდე [[აშშ]]-სა და ჩრდილოეთ [[აფრიკა|აფრიკას]] შორის.
+ატლანტის საშუალო სიღრმე ზღვებითურთ 3.332 მეტრია; ზღვების გარეშე - 3.926 მ. ყველაზე ღრმა 8.605 მეტრით პუერტო რიკოს ღრმულია. ატლანტიკის სიგანე მერყეობს 2.848 კმ-ით [[ბრაზილია|ბრაზილიასა]] და [[ლიბერია|ლიბერიას]] შორის 4.830 კმ-მდე [[აშშ]]-სა და ჩრდილოეთ [[აფრიკა|აფრიკას]] შორის.
 
-ატლანტიკის ოკეანეს უსწორმასწორო სანაპირო აქვს უამრავი ყურით, უბითა და ზღვით. მათ შორისაა [[კარიბების ზღვა]], [[მექსიკის ყურე]], [[სენტ-ლორენსის ყურე]], [[ხმელთაშუა ზღვა]], [[შავი ზღვა]], [[ჩრდილოეთის ზღვა]], [[ლაბრადორის ზღვა]], [[ბალტიკის ზღვა]] და [[ნორვეგია-გრენლანდიის ზღვა]]. ოკეანის კუნძულებია: ფაროს კუნძულები, გრენლანდია, ისლანდია, როკალი, დიდი ბრიტანეთი, ირლანდია, ფერნანდო დე ნორონია, აზორის კუნძულები, მადეირას კუნძულები, კანარის კუნძულები, კაბო ვერდეს კუნძულები, სან-ტომე და პრინსიპის კუნძულები, ნიუფაუნდლენდი, ბერმუდის კუნძულები, უესტ-ინდის კუნძულები, ასენსიონი, წმ. ელენეს კუნძულები, ტრინიდადი, მარტინ ვაზი, ტრისტან და კუნია, ფოლკლენდის კუნძულები და სამხრეთ ჯორჯიის კუნძული.
+ატლანტის ოკეანეს უსწორმასწორო სანაპირო აქვს უამრავი ყურით, უბითა და ზღვით. მათ შორისაა [[კარიბის ზღვა]], [[მექსიკის ყურე]], [[სენტ-ლორენსის ყურე]], [[ხმელთაშუა ზღვა]], [[შავი ზღვა]], [[ჩრდილოეთის ზღვა]], [[ლაბრადორის ზღვა]], [[ბალტიის ზღვა]] და [[ნორვეგია-გრენლანდიის ზღვა]]. ოკეანის კუნძულებია: ფაროს კუნძულები, გრენლანდია, ისლანდია, როკალი, დიდი ბრიტანეთი, ირლანდია, ფერნანდო დე ნორონია, აზორის კუნძულები, მადეირას კუნძულები, კანარის კუნძულები, კაბო ვერდეს კუნძულები, სან-ტომე და პრინსიპის კუნძულები, ნიუფაუნდლენდი, ბერმუდის კუნძულები, უესტ-ინდის კუნძულები, ასენსიონი, წმ. ელენეს კუნძულები, ტრინიდადი, მარტინ ვაზი, ტრისტან და კუნია, ფოლკლენდის კუნძულები და სამხრეთ ჯორჯიის კუნძული.
 
 {{ესკიზი}}
 {{ოკეანეები}}
 
-[[კატეგორია:ატლანტის ოკეანე]]
+
 [[კატეგორია:ოკეანეები]]
 
 [[af:Atlantiese Oseaan]]
