*Empty MediaWiki Message*

--- a/გაბრიელ_I_(კათოლიკოსი).mw
+++ b/გაბრიელ_I_(კათოლიკოსი).mw
@@ -1,4 +1,9 @@
-'''გაბრიელ I''', ქართლის [[კათოლიკოსი]] VI საუკუნის დასაწყისში. იხსენიება აბრაამ სომეხთა კათალიკოსის მესამე ეპისტოლეში (VII საუკუნის დასაწყისი) კირონ ქართლის კათოლიკოსისადმი. ამ წყაროს თანახმად, გაბრიელ I ყოფილა [[დვინის საეკლესიო კრება 506|დვინის საეკლესიო კრების]] (506) მონაწილე, ქართული ეკლესიის დელეგაციის ხელმძღვანელი.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
+
+'''გაბრიელ I''', ქართლის [[კათოლიკოსი]] VI საუკუნის დასაწყისში. იხსენიება აბრაამ სომეხთა კათოლიკოსის მესამე ეპისტოლეში (VII საუკუნის დასაწყისი) კირონ ქართლის კათოლიკოსისადმი. ამ წყაროს თანახმად, გაბრიელ I ყოფილა [[დვინის საეკლესიო კრება 506|დვინის საეკლესიო კრების]] ([[506]]) მონაწილე, ქართული ეკლესიის დელეგაციის ხელმძღვანელი.
 
 
 
