*Empty MediaWiki Message*

--- a/გაბრიელ_II_(კათოლიკოსი).mw
+++ b/გაბრიელ_II_(კათოლიკოსი).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
 '''გაბრიელ II''', ქართლის [[კათოლიკოსი]] IX საუკუნის 30-50-იან წლებში.
 
 
