*Empty MediaWiki Message*

--- a/გაბრიელ_III.mw
+++ b/გაბრიელ_III.mw
@@ -1,7 +1,9 @@
-'''გაბრიელ III''', [[საქართველო | საქართველოს]] [[კათოლიკოსი |კათოლიკოს-პატრიარქი]] [[გიორგი II | გიორგი II-ის]] ([[1072]]-[[1089]]) დროს. წარმოშობით სოფ. საფარიდან ყოფილა და საფარელად იწოდებოდა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
+'''გაბრიელ III''', [[საქართველო | საქართველოს]] [[კათოლიკოსი |კათოლიკოს-პატრიარქი]] [[გიორგი II, საქართველოს მეფე | გიორგი II-ის]] ([[1072]]-[[1089]]) დროს. წარმოშობით სოფ. საფარიდან ყოფილა და საფარელად იწოდებოდა.
 
 
 [[კატეგორია:ქართველები]]
-
-
-[[კატეგორია:საქართველოს კათოლიკოსები]]
+[[კატეგორია: საქართველოს კათოლიკოსები]]
