*Empty MediaWiki Message*

--- a/გაბრიელ_(ჯიბრაელ)_ბატონიშვილი.mw
+++ b/გაბრიელ_(ჯიბრაელ)_ბატონიშვილი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
 '''გაბრიელ (ჯიბრაელ) ბატონიშვილი''' (''ბაგრატიონი'') (* [[13 აგვისტო]], [[1788]] ―   †  [[29 თებერვალი]], [[1812]], [[პეტერბურგი]]), [[გიორგი XII|გიორგი XII-ისა]] და მარიამ დედოფლის ვაჟი (ნამდვილი სახელი - ჯიბრაელი, [[რუსეთი|რუსეთში]] ეძახდნენ გაბრიელს).
 
 ზოგიერთი ცნობით [[1803]] წლის აპრილში სამეფო სახლის წევრთა რუსეთში გადასახლების საკითხთან დაკავშირებით განაწყენებული გაბრიელი დაეხმარა დედას გენერალ ლაზარევის მოკვლაში. [[1803]] გაბრიელი დედასა და ძმებთან ერთად გადაასახლეს რუსეთში. ცხოვრობდა პეტერბურგში. დასაფლავებულია [[ალექსანდრე ნეველი ლავრა|ალექსანდრე ნეველის ლავრაში]].
