*Empty MediaWiki Message*

--- a/გაბრიელი_(ქორეპისკოპოსი).mw
+++ b/გაბრიელი_(ქორეპისკოპოსი).mw
@@ -1,4 +1,8 @@
-'''გაბრიელი''', კახეთის [[მთავარი]] ([[ქორეპისკოპოსი]]), გარდაბნელ დონაურთა საგვარეულოდან. [[ვახუშტი ბატონიშვილი|ვახუშტის]] ცნობით გაბრიელი კახეთის რიგით მეოთხე მტავარი იყო. მისი მმართველობის დროს ([[861]]-[[881]])  [[თბილისი|თბილისის]] [[ამირა|ამირამ]] გაბულოცმა [[კახეთის სამთავრო|კახეთის სამთავროს]] წაართვა [[გარდაბანი]].
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
+'''გაბრიელი''', კახეთის [[მთავარი]] ([[ქორეპისკოპოსი]]), გარდაბნელ დონაურთა საგვარეულოდან. [[ვახუშტი ბატონიშვილი|ვახუშტის]] ცნობით გაბრიელი კახეთის რიგით მეოთხე მთავარი იყო. მისი მმართველობის დროს ([[861]]-[[881]])  [[თბილისი|თბილისის]] [[ამირა|ამირამ]] გაბულოცმა [[კახეთის სამთავრო|კახეთის სამთავროს]] წაართვა [[გარდაბანი]].
 
 
 
