*Empty MediaWiki Message*

--- a/გაბრიელი_(_X_საუკუნე).mw
+++ b/გაბრიელი_(_X_საუკუნე).mw
@@ -1,4 +1,8 @@
-'''გაბრიელი''', X საუკუნის [[ქართველები|ქართველი]] კალიგრაფი. მოღვაწეობდა [[შატბერდი|შატბერდის]] მონასტერში, სადაც 936 ვინმე გრიგოლ მირდატის ძის შეკვეთით გადაწერა [[სახარება]], რომელიც ცნობილია   ჯრუჭის I ოთხთავის სახელით ([[საქართველოს მეცნიერებათა აკედემია|საქართველოს მეცნიერებათა აკედემიის]] [[ხელნაწერთა ინსტიტუტი]], H-1660).ჯრუჭის I ოთხთავი  ნაწერია [[ეტრატი|ეტრატზე]], ორ სვეტად, მრგლოვნად, ყავისფერ-მოყვითალო მელნით. ასოები მსხვილია, სქელკონტურიანი, კვადრატული, ოდნავ შემაღლებული პროპორციებისა, უსამკაულო; ზოგი ასო ძალიან ჩამოგრძელებულია, რაც იმას მოწმობს, რომ ამ დროს უკვე ჩნდება დეკორატიული გაფორმების სურვილი. ეს ხერხი, [[სინგური|სინგურის]] გამოყენებასთან ერთად, თვალსაჩინო დეკორაციულ ეფექტს ახდენს. 940 ჯრუჭის ოთხთავი [[კამარა|კამარებითა]] და [[მინიატურა|მინიატიურებით]] შეუმკიათ ([[თევდორე,  "კამარათა მწერალი"]]).
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
+'''გაბრიელი''', X საუკუნის [[ქართველები|ქართველი]] კალიგრაფი. მოღვაწეობდა [[შატბერდი|შატბერდის]] მონასტერში, სადაც [[936]] ვინმე გრიგოლ მირდატის ძის შეკვეთით გადაწერა [[სახარება]], რომელიც ცნობილია   ჯრუჭის I ოთხთავის სახელით ([[საქართველოს მეცნიერებათა აკედემია|საქართველოს მეცნიერებათა აკედემიის]] [[ხელნაწერთა ინსტიტუტი]], H-1660).ჯრუჭის I ოთხთავი  ნაწერია [[ეტრატი|ეტრატზე]], ორ სვეტად, მრგლოვნად, ყავისფერ-მოყვითალო მელნით. ასოები მსხვილია, სქელკონტურიანი, კვადრატული, ოდნავ შემაღლებული პროპორციებისა, უსამკაულო; ზოგი ასო ძალიან ჩამოგრძელებულია, რაც იმას მოწმობს, რომ ამ დროს უკვე ჩნდება დეკორატიული გაფორმების სურვილი. ეს ხერხი, [[სინგური|სინგურის]] გამოყენებასთან ერთად, თვალსაჩინო დეკორაციულ ეფექტს ახდენს. [[940]] ჯრუჭის ოთხთავი [[კამარა|კამარებითა]] და [[მინიატურა|მინიატიურებით]] შეუმკიათ ([[თევდორე,  "კამარათა მწერალი"]]).
 
 
 
