--- a/გაბრიელი_(ქიქოძე).mw
+++ b/გაბრიელი_(ქიქოძე).mw
@@ -1,5 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
 <div style="float:right">[[Image:MeupeGabrieli.jpg]]</div>
-
 '''გაბრიელი''' (ერისკაცობაში '''გერასიმე მაქსიმეს ძე ქიქოძე''') (* [[15 ნოემბერი]], [[1825]], სოფ. [[ბახვი]], [[ოზურგეთი|ოზურგეთის რაიონი]]  ― † [[26 დეკემბერი]], [[1896]], [[ქუთაისი]]), გამოჩენილი [[ქართველები|ქართველი]] სასულიერო და საზოგადო მოღვაწე, თვალსაჩინო მეცნიერი და პედაგოგი, [[იმერეთი |იმერეთის]] [[ეპისკოპოსი]] [[1860]] - [[1896]] წლებში.
 
 ===განათლება=== 
@@ -24,5 +27,7 @@
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი სასულიერო მოღვაწეები]]
+[[კატეგორია:ქართველი მეცნიერები]]
 [[კატეგორია:დაბადებული  1825]]
 [[კატეგორია:გარდაცვლილი  1896]]
