*Empty MediaWiki Message*

--- a/გაბრიელ_მაიორი.mw
+++ b/გაბრიელ_მაიორი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
 '''გაბრიელ მაიორი''' ( †  [[სექტემბერი]], [[1795]]), [[ქართველები|ქართველი]] დრამატურგი, მსახიობი, თეატრალური მოღვაწე. მისი გვარი უცნობია. [[რუსეთი|რუსეთში]] ახლდა [[ერეკლე II|ერეკლე II-ის]] ელჩს [[ანდრონიკაშვილი, პაატა|ანდრონიკაშვილს]]. იქ შეისწავლა საარტილერიო საქმე და სამშობლოში მაიორის ჩინით დაბრუნდა. მსახურობდა ერეკლე II-ის ჯარში. [[თბილისი|თბილისში]] დგამდა წარმოდგენებს, წერდა პიესებს, მსახიობობდა. მისი მონაწილეობით წარმოდგენები გამართულა [[თელავი|თელავშიც]]. დაიღუპა [[კრწანისის ბრძოლა 1795|კრწანისის ბრძოლაში]], [[აღა-მაჰმად-ხანი|აღა-მაჰმად-ხანის]] შემოსევის დროს.
 
 
