*Empty MediaWiki Message*

--- a/გაბრიელ_მცირე.mw
+++ b/გაბრიელ_მცირე.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
 '''გაბრიელ მცირე'''( †  [[1802]]), [[ქართველები|ქართველი]] საეკლესიო მოღვაწე, მწერალი და კალიგრაფი. ბერად იყო [[დავითგარეჯა|დავითგარეჯის]] [[იოანე ნათლისმცემელი|იოანე ნათლისმცემლის]] მონასტერში, სადაც 30 წელი გაატარა. მოთარეშე [[ლეკები|ლეკებმა]] თავი მოჰკვეთეს. დასაფლავებულია იმავე მონასტერში.  
 
 გაბრიელ მცირეს ორიგინალური მემუარული თხზულებანი თავმოყრილია ხელნაწერ კრებულში, რომელსაც "ჯვარშემოსილი" ეწოდება (დაცულია ბოდლის [[ბიბლიოთეკა|ბიბლიოთეკაში]], [[ უორდროპი, მარჯორი სკოტ  |მარჯორი უორდროპის]] ფონდში). მათგან მნიშვნელოვანია [[ჰაგიოგრაფია|ჰაგიოგრაფიული]] ძეგლი "ონოსიფორეს ცხოვრება", "მღვდელმთავრისა ლიტურღიისა განმარტება", მემუარული "თხრობანი" და სხვა. გაბრიელ მცირეს ეკუთვნის აგრეთვე ასკეტიკურ-ჰომილეტიკური კრებულები: [[1892]]-[[1894]] გამოცემული "გვირგვინი", "სამოთხის ყვავილი" ([[1895]]), "ოქროს წყარო" ([[1905]]), "სუფევა", "კლიტე", "სამასეული", "მანანა" და სხვა. მათში თავმოყრილია [[ბასილი დიდი|ბასილი დიდის]], [[იოანე ოქროპირი|იოანე ოქროპირის]], [[მაქსიმე აღმსარებელი|მაქსიმე აღმსარებლის]], [[იოანე მოსხი|იოანე მოსხისა]] და სხვა თხზულებათაგან გამოკრეფილი მასალა. ყოველი კრებულის სათაურსა და შემადგენელი თავების რაოდენობას სიმბოლური მნიშვნელობა აქვს.
