*Empty MediaWiki Message*

--- a/გაბრიელ_პატარაი.mw
+++ b/გაბრიელ_პატარაი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
 '''გაბრიელ პატარაჲ''', X საუკუნის [[ქართველები|ქართველი]] კალიგრაფი. მოღვაწეობდა სამხრეთ საქართველოს ერთ-ერთ სავანეში, შესაძლოა [[პარხალი|პარხალში]]. 
 
 ცნობილია მის მიერ გადაწერილი რამდენიმე წიგნი: ა) პარხლის მრავალთავი ([[საქართველოს მეცნიერებათა აკადემია|საქართველოს მეცნიერებათა აკადემიის]] [[ხელნაწერთა ინსტიტუტ]]ი, A-95), უზარმაზარი ხელნაწერი (1310 გვერდი, ზომა 45,5x34 სმ), რომელშიც შესულია ქართული მწერლობის უძველესი ძეგლების - [[შუშანიკი|შუშანიკისა]] და [[აბო თბილელი|აბო თბილელის]] [[მარტვილობა|მარტვილობათა]] ტექსტები. კრებული ნაწერია ყავისფერი მელნით, ორ სვეტად, ლამაზი, მკაფიო [[ნუსხური|ნუსხურით]], ასოები მსხვილია, სამკაულები არა აქვს. საზედაო ასოების უმეტესობა შესრულებულია მელნით, ნაწილი - [[სინგური|სინგურით]]. XVI საუკუნეში კრებული ჯერ კიდევ პარხლის მონასტერს ეკუთვნოდა, XVII საუკუნეში კი თურქეთიდან გამოიხსნა და განაახლა დადიანის ასულმა დედოფალთ დედოფალმა მარიამმა.
