*Empty MediaWiki Message*

--- a/გაბრიელ_საფარელი.mw
+++ b/გაბრიელ_საფარელი.mw
@@ -1,4 +1,8 @@
-'''გაბრიელ საფარელი''', X-XI საუკუნეების [[ქართველები|ქართველ]]ი ოქრომჭედელი. მისი ნამუშევრებიდან შემონახულია [[საფარის მონასტერი|საფარის მონასტრის]] საწინამძღვრო ჯვარი (მოოქრული ვერცხლი, 52,5x44,5 სმ. როგორც ჩანს, ჯვარი მოგვიანებით [[ბრეთის ეკლესია|ბრეთის ეკლესიაშ]]ი გადმოუტანიათ. იგი სამეცნიერო ლიტერატურაში ბრეთის ჯვრის სახელითაა ცნობილი).
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გაბრიელ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გაბრიელ]]
+|}</small>
+'''გაბრიელ საფარელი''', X-XI საუკუნეების [[ქართველები|ქართველი]] ოქრომჭედელი. მისი ნამუშევრებიდან შემონახულია [[საფარის მონასტერი|საფარის მონასტრის]] საწინამძღვრო ჯვარი (მოოქრული ვერცხლი, 52,5x44,5 სმ. როგორც ჩანს, ჯვარი მოგვიანებით [[ბრეთის ეკლესია|ბრეთის ეკლესიაში]] გადმოუტანიათ. იგი სამეცნიერო ლიტერატურაში ბრეთის ჯვრის სახელითაა ცნობილი).
 
 ჯვრის ცენტრში გამოსახულია ჯვარცმული ქრისტე, მკლავების ბოლოებში - ღვთისმშობლისა და იოანე მახარებლის ფიგურები (შესრულებულია გაბრიელ საფარელის თანაშემწის მიერ) და ორი მედალიონი (ანგელოზი და წვეროსანი წმინდანი). ყველა ფიგურა ცალკე ფირფიტაზეა ნაჭედი და შემდეგ ჯვარზე დაკრული. ჯვრის ზურგზე და ტარზე ფორლოვანი ორნამენტებია. წარწერებში, გარდა ოსტატისა, მოხსენიებულია [[ბაგრატ III]] და მისი მამა მეფეთ მეფე [[გურგენი]]. მათი ტიტულატურის მიხედვით ჯვრის შესრულების თარიღი უნდა იყოს [[994]]-[[1001]]. 
 
