*Empty MediaWiki Message*

--- a/ზვიად_გამსახურდია.mw
+++ b/ზვიად_გამსახურდია.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გამსახურდია'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გამსახურდია]]
+|}</small>
+
 <div style="float:right">[[Image:President zviad gamsakhurdia 350.jpg]]</div>
 
 '''ზვიად გამსახურდია''' (* [[1939]] წლის [[31 მარტი]] ―  † [[1993]] წლის [[31 დეკემბერი]]), თვალსაჩინო მეცნიერი-ფილოლოგი, მწერალი, საზოგადო და პოლიტიკური მოღვაწე, ფილოლოგიის მეცნიერებათა დოქტორი, ქართული ეროვნული მოძრაობის ლიდერი, [[საქართველო|საქართველოს]] პირველი პრეზიდენტი ([[1991]]-[[1993]]).
