*Empty MediaWiki Message*

--- a/იონა_(გედევანიშვილი).mw
+++ b/იონა_(გედევანიშვილი).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გედევანიშვილი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გედევანიშვილი]]
+|}</small>
+
 '''იონა გედევანიშვილი''' (''ერისკაცობაში - ივანე'') (* [[1737]] ―   †   [[1821]]), [[ქართველები|ქართველი]] საეკლესიო მოღვაწე, მოგზაური და მწერალი.
 
 [[1756]] [[რუსეთი|რუსეთში]] გაჰყვა თავის მასწავლებელს [[ანტონ I|ანტონ I-ს]]. რუსეთიდან დაბრუნებულმა ანტონმა მცხეთის ჯვრის [[არქიმანდრიტი|არქიმანდრიტად]] აკურთხა. [[1785]]-იდან [[რუისი|რუისის]] [[მიტროპოლიტი]] იყო. რაღაც დანაშაულისათვის [[ერეკლე II|ერეკლე II-ის]] განჩინებით [[საეკლესიო კრებები|საეკლესიო კრებამ]] [[ეპარქია]] ჩამოართვა და იძულებით გააწესა [[დავითგარეჯა|დავითგარეჯის]] უდაბნოში. გედევანიშვილი იმერეთში გაიპარა. მაგრამ არ შეიწყნარეს და [[თბილისი|თბილისში]] დააბრუნეს. აქედან ის [[ახალციხე|ახალციხეს]] გაიქცა, [[კონსტანტინოპოლი|კონსტანტინოპოლში]] ჩავიდა და შემოიარა აღმოსავლეთის ქვეყნები. აღმოსავლეთის ეკლესიათა პატრიარქებს მისთვის მღვდელმთავრის ხარისხი აღუდგინეს. გედევანიშვილმა იმოგზაურა [[ევროპა|ევროპაში]], ერთხანს [[მოლდავეთი|მოლდავეთში]] იყო, სადაც პოტიომკინის კარზე დიპლომატიური მისიით ჩასულ ქართველ მოღვაწეებს შეხვდა. გედევანიშვილი აქტიურად ჩაება რუსეთის კულტურულ ცხოვრებაში, იყო სასულიერო წიგნების გამომცემელი საზოგადოების წევრი. [[ეკატერინე II|ეკატერინე II-მ]] რუსეთის წინაშე განსაკუთრებული დამსახურებისათვის დიდი პენსია დაუნიშნა. [[1792]]-იდან ცხოვრობდა [[კიევი|კიევში]], [[1795]]-დან [[მოსკოვი|მოსკოვში]], იქვე გარდაიცვალა.
@@ -5,5 +10,7 @@
 თავისი მოგზაურობა ([[1805]]-[[1810]]) გედევანიშვილმა აღწერა თხზულებაში "მიმოსულა ანუ მგზავრობა იონა რუისის მიტროპოლიტისა". ნაწარმოებში აღწერილია კონსტანტინოპოლი, [[ათონის ივერთა მონასტერი]], [[იერუსალიმი]], [[ალექსანდრია (ეგვიპტე)|ალექსანდრია]], [[სინის მთა]], [[ვენა]], [[პოლონეთი|პოლონეთის]], მოლდავეთისა და რუსეთის ქალაქები, ხალხთა ზნე-ჩვეულებები, ვაჭრობა-მრეწველობა და სხვა. მეცნიერული თვალთახედვისა და ერუდიციის წყალობით გედევანიშვილისნაშრომს მნიშვნელოვანი ადგილი უჭირავს მოგზაურული ჟანრის თხზულებათა შორის.
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი საეკლესიო მოღვაწეები]]
+[[კატეგორია:ქართველი მწერლები]]
 [[კატეგორია:დაბადებული  1737]]
 [[კატეგორია:გარდაცვლილი  1821]]
