*Empty MediaWiki Message*

--- a/გერმანე.mw
+++ b/გერმანე.mw
@@ -1,11 +1,11 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი ''' გერმანე''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
 
-* [[გერმანე, XVI ს.]] - აღმოსავლეთ საქართველოს კათალიკოსი
-* [[გერმანე XVIII ს. ]] - დავითგარეჯის მონასტრის არქიმანდრიტი
+* [[გერმანე (XVI ს.)]] - აღმოსავლეთ საქართველოს კათოლიკოსი
+* [[გერმანე (XVIII ს.) ]] - დავითგარეჯის მონასტრის არქიმანდრიტი
 * [[გერმანე (წულუკიძე)]] - დასავლეთ საქართველოს კათალიკოს-პატრიარქი
 * [[გერმანე მღვდელმონაზონი]] - საეკლესიო მწერალი, თბილისის სიონის ეკლესიის მსახური
 * [[გერმანე ხუცესმონაზონი]] - ქართული კულტურის მოღვაწე
+
+{{მრავალმნიშვნელოვანი}}
