*Empty MediaWiki Message*

--- a/გერმანე_(აღმოსავლეთ_საქართველოს_კათოლიკოს-პატრიარქი).mw
+++ b/გერმანე_(აღმოსავლეთ_საქართველოს_კათოლიკოს-პატრიარქი).mw
@@ -1,5 +1,9 @@
-'''გერმანე''', აღმოსავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] XVI საუკუნის 40-იან წლებში, ლუარსაბ I-ის მეფობის დროს.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გერმანე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გერმანე]]
+|}</small>
+
+'''გერმანე''', აღმოსავლეთ [[საქართველო|საქართველოს]] [[კათოლიკოს-პატრიარქი]] XVI საუკუნის 40-იან წლებში, [[ლუარსაბ I|ლუარსაბ I-ის]] მეფობის დროს.
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
