*Empty MediaWiki Message*

--- a/გერმანე_(XVIII_ს.).mw
+++ b/გერმანე_(XVIII_ს.).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გერმანე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გერმანე]]
+|}</small>
 '''გერმანე''', [[დავითგარეჯა|დავითგარეჯის]] მონასტრის [[არქიმანდრიტი]] [[1769]]-[[1781]], [[თბილისი|თბილისის]] [[მიტროპოლიტი]] [[1781]]-დან XVIII საუკუნის მიწურულამდე, [[ქართლის სამეფო]] კართან დაახლოებული პირი. მიტროპოლიტობის დროს იყო [[დიკასტერია|დიკასტერიის]] წევრი.
 
 
