*Empty MediaWiki Message*

--- a/გერმანე_(წულუკიძე).mw
+++ b/გერმანე_(წულუკიძე).mw
@@ -1,7 +1,10 @@
-'''გერმანე''' (გვარად წულუკიძე), დასავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] XVIII საუკუნის 40-იან წლებში, იმერეთის სამეფო კართან დაახლოებული და გავლენიანი მსხვილი ფეოდალური სახლის წევრი. ხანმოკლე მმართველობის შემდეგ გადამდგარა, ბოლოს ნიკორწმინდის ეპოსკოპოსი ყოფილა მიტროპოლიტის ხარისხით.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გერმანე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გერმანე]]
+|}</small>
+'''გერმანე''' (გვარად წულუკიძე), დასავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] XVIII საუკუნის 40-იან წლებში, [[იმერეთის სამეფო]] კართან დაახლოებული და გავლენიანი მსხვილი ფეოდალური სახლის წევრი. ხანმოკლე მმართველობის შემდეგ გადამდგარა, ბოლოს ნიკორწმინდის ეპოსკოპოსი ყოფილა მიტროპოლიტის ხარისხით.
 
 
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
