--- a/ივანე_გვარამაძე.mw
+++ b/ივანე_გვარამაძე.mw
@@ -1,11 +1,19 @@
-'''ივანე გვარამაძე''' ([[17 ოქტომბერი]], [[1831]], [[ვალე]] – [[24 მაისი]], [[1912]], [[ახალციხე]]) - პუბლიცისტი, ეთნოგრაფი, მწერალი და საზოგადო მოღვაწე.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გვარამაძე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გვარამაძე]]
+|}</small>
 
-ივანე გვარამაძე დაიბადა პავლე გვარამაძის, ვალეში მცხოვრები ქართველი კათოლიკეს ოჯახში. დაწყებითი სკოლის დასრულების მერე მიაშურა [[სტამბოლი|სტამბოლს]], სადაც ქართველმა განმანათლებელ და კათოლიკე ბერს [[ხარისჭირაშვილ, პეტრე|პეტრე ხარისჭირაშვილს]] ახალი დაარსებული ჰქონდა (1850-იანი წლებიდან) სამონასტრო სასწავლებელი [[ფერი-ქოა]]. იქიდან საშუალება ეძლევა განაგრძოს თავისი განათლება ვატიკანის, [[იტალია|იტალიისა]] და [[საფრანგეთი|საფრანგეთის]] სასულიერო-კათოლიკურ ცენტრებში.
+'''ივანე გვარამაძე''' (* [[17 ოქტომბერი]], [[1831]], [[ვალე]] ―   †   [[24 მაისი]], [[1912]], [[ახალციხე]]) - პუბლიცისტი, ეთნოგრაფი, მწერალი და საზოგადო მოღვაწე.
 
-1860-წლების დამლევს ეკურთხა მღვდლად, რის შემდეგაც იწყებს ნაყოფიერ პედაგოგიურ და პუბლიცისტურ მოღვაწეობას. ამიერად ივანე გვარამაძე ძირითადად ახალციხეშია და "ვინმე მესხის" ფსევდონიმით რეგულარულად აქვეყნებს წერილებს "ივერია", "დროებასა" და "სახალხო ფურცელში". მისი პუბლიცისტური, პედაგოგიური და ეთნოგრაფიული ინტერესები მას 1870-იანი წლებიდან აახლოებს [[ჭავჭავაძე, ილია|ილია ჭავჭავაძეს]].
+ივანე გვარამაძე დაიბადა პავლე გვარამაძის, ვალეში მცხოვრები ქართველი კათოლიკეს ოჯახში. დაწყებითი სკოლის დასრულების მერე მიაშურა [[სტამბოლი|სტამბოლს]], სადაც ქართველმა განმანათლებელ და კათოლიკე ბერს [[ხარისჭირაშვილი, პეტრე|პეტრე ხარისჭირაშვილს]] ახალი დაარსებული ჰქონდა ([[1850]]-იანი წლებიდან) სამონასტრო სასწავლებელი [[ფერი-ქოა]]. იქიდან საშუალება ეძლევა განაგრძოს თავისი განათლება ვატიკანის, [[იტალია|იტალიისა]] და [[საფრანგეთი|საფრანგეთის]] სასულიერო-კათოლიკურ ცენტრებში.
+
+[[1860]]-წლების დამლევს ეკურთხა მღვდლად, რის შემდეგაც იწყებს ნაყოფიერ პედაგოგიურ და პუბლიცისტურ მოღვაწეობას. ამიერად ივანე გვარამაძე ძირითადად ახალციხეშია და "ვინმე მესხის" ფსევდონიმით რეგულარულად აქვეყნებს წერილებს "ივერია", "დროებასა" და "სახალხო ფურცელში". მისი პუბლიცისტური, პედაგოგიური და ეთნოგრაფიული ინტერესები მას [[1870]]-იანი წლებიდან აახლოებს [[ჭავჭავაძე, ილია|ილია ჭავჭავაძეს]].
 
 მისი პედაგოგიური მოღვაწეობიდან განსაკუთრებით აღსანიშნავია მის მიერ [[1882]] წელს გამოცემული "ქართლის ცხოვრება. სასწავლებელში მყოფ მოწაფეთა და ყოველთა ქართველთა საკითხავად" და [[1885]] წელს გამოცემული "ქართული ენის საუნჯე". ეს ორივე წიგნი თავის დროის საუკეთესო სახელმძღვანელოებში იყო დამკვიდრებული. მან აღმოაჩინა და მომავალი სასულიერო და სამეცნიერო გზისთვის შეარჩია [[თამარაშვილი, მიხეილ|მიხეილ თამარაშვილი]]. ივანე გვარამაძის თაოსნობით მიმდინარეობდა განმანათლებლური მოღვაწეობა და მისიონერული ქადაგება გათურქებულ მესხებს შორის.
 
-გვარამაძის ლიტერატურული მოღვაწეობის კიდევ ერთი სიმძიმის ცენტრი სწორედ მესხეთისა და იქაური ქრისტიანობის ისტორიაა. [[1896]] წელს [[ჭიჭინაძე, ზაქარია|ზაქარია ჭიჭინაძის]] გამოცემაში გამოდის  მისი "წამება მიქაელ გობრონისა და ასოცადაცამეტ მოყვასთა მისთა მეციხოვნეთა მესხთა" , [[1898]] წელს კატეხეტურ-პედაგოგიური ნაშრომი "მშობლები და მათი შვილები როგორნიც უნდა იყვნენ და როგორც უნდა ზრდიდნენ", ხოლო [[1904]] წელს ცალკე წიგნად გამოდის "ხალხური მესხური ლექსები".
+გვარამაძის ლიტერატურული მოღვაწეობის კიდევ ერთი სიმძიმის ცენტრი სწორედ [[მესხეთი|მესხეთისა]] და იქაური ქრისტიანობის ისტორიაა. [[1896]] წელს [[ჭიჭინაძე, ზაქარია|ზაქარია ჭიჭინაძის]] გამოცემაში გამოდის  მისი "წამება მიქაელ გობრონისა და ასოცადაცამეტ მოყვასთა მისთა მეციხოვნეთა მესხთა" , [[1898]] წელს კატეხეტურ-პედაგოგიური ნაშრომი "მშობლები და მათი შვილები როგორნიც უნდა იყვნენ და როგორც უნდა ზრდიდნენ", ხოლო [[1904]] წელს ცალკე წიგნად გამოდის "ხალხური მესხური ლექსები".
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი პუბლიცისტები]]
+[[კატეგორია:დაბადებული  1831]]
+[[კატეგორია:გარდაცვლილი 1912]]
