*Empty MediaWiki Message*

--- a/გვარამაძე.mw
+++ b/გვარამაძე.mw
@@ -1,8 +1,8 @@
-საკუთარი სახელი ''' გვარამიძე''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
+საკუთარი სახელი ''' გვარამაძე''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
+* [[გვარამაძე, ელენე]] - ბალერინა, პედაგოგი
 * [[გვარამაძე, ივანე]] - პუბლიცისტი, ეთნოგრაფი, მწერალი საზოგადო მოღვაწე
-* [[გვარამიძე, ელენე]] - ბალერინა, პედაგოგი
-* [[გვარამიძე, ნიკოლოზ]] - მეცნიერი, რკინიგზის ტრანსპორტის ინჟინერი
+* [[გვარამაძე, ნიკოლოზ]] - მეცნიერი, რკინიგზის ტრანსპორტის ინჟინერი
 
 
 {{მრავალმნიშვნელოვანი}}
