*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_გ.mw
+++ b/ცნობილი_ქართველები:_გ.mw
@@ -145,8 +145,8 @@
 * [[გვანცა დედოფალი]] - საქართველოს დედოფალი
 * [[გვანცელაძე, ვლადიმერ]] - საბჭოთა კავშირის გმირი
 * [[გვარამაძე, ივანე]] - მწერალი, პუბლიცისტი, ეთნოგრაფი, საზოგადო მოღვაწე
-* [[გვარამიძე, ელენე]] - ბალერინა, პედაგოგი
-* [[გვარამიძე, ნიკოლოზ]] - მეცნიერი, რკინიგზის ტრანსპორტის ინჟინერი
+* [[გვარამაძე, ელენე]] - ბალერინა, პედაგოგი
+* [[გვარამაძე, ნიკოლოზ]] - მეცნიერი, რკინიგზის ტრანსპორტის ინჟინერი
 * [[გვარამ (გუარამ) მამფალი]] - ქართველი პოლიტიკური მოღვაწე
 * [[გვარაძე, ნიკოლოზ]] - მსახიობი და რეჟისორი
 * [[გვასალია, მოსე]] - მწერალი
