*Empty MediaWiki Message*

--- a/გვატემალა_(მრავალმნიშვნელოვანი).mw
+++ b/გვატემალა_(მრავალმნიშვნელოვანი).mw
@@ -1,4 +1,7 @@
-{{მრავალმნიშვნელოვანი}}
+საკუთარი სახელი გვატემალა შეიძლება აღნიშნავდეს:
 
-*'''[[გვატემალა (ქვეყანა)]]''' – სახელმწიფო ცენტრალურ ამერიკაში, გვატემალის რესპუბლიკა.
-*'''[[გვატემალა (ქალაქი)]]''' – ქალაქი, გვატემალის რესპუბლიკის დედაქალაქი.
+
+*[[გვატემალა (ქვეყანა)|გვატემალა]] – სახელმწიფო ცენტრალურ ამერიკაში, გვატემალის რესპუბლიკა.
+*[[გვატემალა (ქალაქი)|გვატემალა]] – ქალაქი, გვატემალის რესპუბლიკის დედაქალაქი.
+
+{{მრავალმნიშვნელოვანი}}
