--- a/ვალენტინ_გიგინეიშვილი.mw
+++ b/ვალენტინ_გიგინეიშვილი.mw
@@ -1,5 +1,11 @@
-'''გიგინეიშვილი, ვალენტინ''' მირიანის ძე (* [[20 დეკემბერი]], [[1887]], [[1 იანვარი]], [[1888]], სოფ. ჯურუყვეთი, ახლანდელი ლანჩხუთის რაიონი ―     †    [[10 აგვისტო]], [[1979]], [[თბილისი]]), [[ქართველები  | ქართველი]] გეოფიზიკოსი. გეოგრაფიის მეცნიერებათა დოქტორი ([[1960]]), საქართველოს მეცნიერებათა დამსახურებული მოღვაწე ([[1966]]). ქართული სინოპტიკური სკოლის ერთ-ერთი დამაარსებელი. [[1911]] დაამთავრა პეტერბურგის უნივერსიტეტის ფიზიკა-მათემატიკური ფაკულტეტი. [[1912]]-[[1930]] ეწეოდა პედაგოგიურ მოღვაწეობა. [[1929]] წლიდან მუშაობდა საქართველოს გეოფიზიკის ობსერვატორიაში, რეორგანიზაციის შემდეგ ([[1953]]-იდან) იყო ამიერკავკასიის რეგიონალური სამეცნიერო-კვლევითი ინსტიტუტის (ახლანდელი ჰიდრომეტეოროლოგიის ინსტიტუტი) სინოპტიკური განყოფილების უფროსი მეცნიერ თანამშრომელი, ამინდის ბიუროს კონსულტანტი. ძირითადი შრომები აქვს სინოპტიკური მეტეოროლოგიისა, აგრეთვე სეისმოლოგიის დარგში. მიღებული აქვს სახელმწიფო ჯილდოები.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიგინეიშვილი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიგინეიშვილი]]
+|}</small>
+
+'''გიგინეიშვილი, ვალენტინ''' მირიანის ძე (* [[20 დეკემბერი]], [[1887]], [[1 იანვარი]], [[1888]], სოფ. ჯურუყვეთი, ახლანდელი [[ლანჩხუთის რაიონი]] ―     †    [[10 აგვისტო]], [[1979]], [[თბილისი]]), [[ქართველები  | ქართველი]] გეოფიზიკოსი. გეოგრაფიის მეცნიერებათა დოქტორი ([[1960]]), საქართველოს მეცნიერებათა დამსახურებული მოღვაწე ([[1966]]). ქართული სინოპტიკური სკოლის ერთ-ერთი დამაარსებელი. [[1911]] დაამთავრა პეტერბურგის უნივერსიტეტის ფიზიკა-მათემატიკური ფაკულტეტი. [[1912]]-[[1930]] ეწეოდა პედაგოგიურ მოღვაწეობა. [[1929]] წლიდან მუშაობდა საქართველოს გეოფიზიკის ობსერვატორიაში, რეორგანიზაციის შემდეგ ([[1953]]-იდან) იყო ამიერკავკასიის რეგიონალური სამეცნიერო-კვლევითი ინსტიტუტის (ახლანდელი ჰიდრომეტეოროლოგიის ინსტიტუტი) სინოპტიკური განყოფილების უფროსი მეცნიერ თანამშრომელი, ამინდის ბიუროს კონსულტანტი. ძირითადი შრომები აქვს სინოპტიკური მეტეოროლოგიისა, აგრეთვე სეისმოლოგიის დარგში. მიღებული აქვს სახელმწიფო ჯილდოები.
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი გეოფიზიკოსები]]
 [[კატეგორია:დაბადებული  1888 ]]
 [[კატეგორია:გარდაცვლილი  1979 ]]
