*Empty MediaWiki Message*

--- a/გიორგი.mw
+++ b/გიორგი.mw
@@ -39,7 +39,7 @@
 * [[გიორგი III დადიანი]] - ოდიშის მთავარი
 * [[გიორგი IV დადიანი]] - ოდიშის მთავარი
 * [[გიორგი დოდისი]] - კალიგრაფი
-* [[გიორგი მაწყვერელი]] - აწყურის ეპისკოპოსი დაახლოებით VIII-IX საუკუნეებში
+* [[გიორგი მაწყვერელი (VIII-IX სს.)]] - აწყურის ეპისკოპოსი დაახლოებით VIII-IX საუკუნეებში
 * [[გიორგი მაწყვერელი]] - აწყურის ეპისკოპოსი X საუკუნის I მესამედში
 * [[გიორგი მერჩულე]] - მწერალი
 * [[გიორგი მთაწმინდელი]] - სასულიერო და საზოგადო მოღვაწე, ,წერალი, მთარგმნელი
