*Empty MediaWiki Message*

--- a/გვერდწითელი.mw
+++ b/გვერდწითელი.mw
@@ -2,6 +2,7 @@
 
 
 * [[გვერდწითელი, გურამ]] - ლიტერატურათმცოდნე, კრიტიკოსი
+* [[გვერდწითელი, თამარა]] - მომღერალი
 * [[გვერდწითელი, ილია]] - ქიმიკოსი
 * [[გვერდწითელი, ირაკლი]] -  ფიზიკოსი
 * [[გვერდწითელი, რუსუდან]] - არქიტექტორ-რესტავრატორი
