*Empty MediaWiki Message*

--- a/გიორგი.mw
+++ b/გიორგი.mw
@@ -3,9 +3,11 @@
 
 * [[გიორგი (XI ს.)]] - საქართველოს კათოლიკოს-პატრიარქი
 * [[გიორგი (XIV ს.)]] - საქართველოს კათოლიკოს-პატრიარქი
-* [[გიორგი I]] - საქართველოს მეფე
-* [[გიორგი I]] - აფხაზთა (დასავლეთ საქართველოს) მეფე
-* [[გიორგი I]] - იმერეთის მეფე
+* [[გიორგი I, ბაგრატ III-ის ძე]] - საქართველოს მეფე
+* [[გიორგი I, აღწეფელი]]  - აფხაზთა (დასავლეთ საქართველოს) მეფე
+* [[გიორგი I, ბაგრატ I-ის ძე]] - იმერეთის მეფე
+* [[გიორგი I გურიელი]] - გურიის მთავარი
+* [[გიორგი I დადიანი]] - ოდიშის მთავარი
 * [[გიორგი II, საქართველოს მეფე]] - საქართველოს მეფე
 * [[გიორგი II, კახეთის მეფე]] - კახეთის მეფე
 * [[გიორგი II, იმერეთის მეფე]] - იმერეთის მეფე
@@ -29,12 +31,10 @@
 * [[გიორგი ბატონიშვილი, ალექსანდრე II-ის ვაჟი|გიორგი ბატონიშვილი]] - კახეთის სამეფოს პოლიტიკური მოღვაწე
 * [[გიორგი ბატონიშვილი, ვახტანგ VI-ის ძე|გიორგი ბატონიშვილი]] - მოსკოვის ქართული კოლონიის მეთაური
 * [[გიორგი ბატონიშვილი]] - იმერეთის მეფის სოლომონ I-ის შვილიშვილი
-* [[გიორგი I გურიელი]] - გურიის მთავარი
 * [[გიორგი II გურიელი]] - გურიის მთავარი
 * [[გიორგი III გურიელი]] - გურიის მთავარი
 * [[გიორგი IV გურიელი]] - გურიის მთავარი
 * [[გიორგი V გურიელი]] - გურიის მთავარი
-* [[გიორგი I დადიანი]] - ოდიშის მთავარი
 * [[გიორგი II დადიანი]] - ოდიშის ერისთავი
 * [[გიორგი III დადიანი]] - ოდიშის მთავარი
 * [[გიორგი IV დადიანი]] - ოდიშის მთავარი
