*Empty MediaWiki Message*

--- a/გიორგი.mw
+++ b/გიორგი.mw
@@ -8,10 +8,13 @@
 * [[გიორგი I, ბაგრატ I-ის ძე]] - იმერეთის მეფე
 * [[გიორგი I გურიელი]] - გურიის მთავარი
 * [[გიორგი I დადიანი]] - ოდიშის მთავარი
-* [[გიორგი II, საქართველოს მეფე]] - საქართველოს მეფე
-* [[გიორგი II, კახეთის მეფე]] - კახეთის მეფე
-* [[გიორგი II, იმერეთის მეფე]] - იმერეთის მეფე
-* [[გიორგი II, აფხაზთა (დას. საქართველოს) მეფე]] - აფხაზთა (დასავლეთ საქართველოს) მეფე
+* [[გიორგი II, საქართველოს მეფე | გიორგი II]] - საქართველოს მეფე
+* [[გიორგი II, კახეთის მეფე |გიორგი II]] - კახეთის მეფე
+* [[გიორგი II, იმერეთის მეფე | გიორგი II]] - იმერეთის მეფე
+* [[გიორგი II, აფხაზთა (დას. საქართველოს) მეფე | გიორგი II]] - აფხაზთა (დასავლეთ საქართველოს) მეფე
+* [[გიორგი II გურიელი]] - გურიის მთავარი
+* [[გიორგი II დადიანი]] - ოდიშის ერისთავი
+
 * [[გიორგი III, საქართველოს მეფე]] - საქართველოს მეფე
 * [[გიორგი III, კონსტანტინე მეფის ძე]] - იმერეთის მეფე
 * [[გიორგი IV ლაშა]] - საქართველოს მეფე
@@ -31,11 +34,9 @@
 * [[გიორგი ბატონიშვილი, ალექსანდრე II-ის ვაჟი|გიორგი ბატონიშვილი]] - კახეთის სამეფოს პოლიტიკური მოღვაწე
 * [[გიორგი ბატონიშვილი, ვახტანგ VI-ის ძე|გიორგი ბატონიშვილი]] - მოსკოვის ქართული კოლონიის მეთაური
 * [[გიორგი ბატონიშვილი]] - იმერეთის მეფის სოლომონ I-ის შვილიშვილი
-* [[გიორგი II გურიელი]] - გურიის მთავარი
 * [[გიორგი III გურიელი]] - გურიის მთავარი
 * [[გიორგი IV გურიელი]] - გურიის მთავარი
 * [[გიორგი V გურიელი]] - გურიის მთავარი
-* [[გიორგი II დადიანი]] - ოდიშის ერისთავი
 * [[გიორგი III დადიანი]] - ოდიშის მთავარი
 * [[გიორგი IV დადიანი]] - ოდიშის მთავარი
 * [[გიორგი დოდისი]] - კალიგრაფი
