*Empty MediaWiki Message*

--- a/გიორგი.mw
+++ b/გიორგი.mw
@@ -22,8 +22,9 @@
 * [[გიორგი IV გოჩია]] - იმერეთის მეფე
 * [[გიორგი IV გურიელი]] - გურიის მთავარი
 * [[გიორგი IV დადიანი]] - ოდიშის მთავარი
-* [[გიორგი V ბრწყინვალე]]- საქართველოს მეფე
-* [[გიორგი V]] 
+* [[გიორგი V ბრწყინვალე]]- [[საქართველო|საქართველოს]] მეფე
+* [[გიორგი V გურიელი]] - [[გურიის მხარე|გურიის]] მთავარი
+* [[გიორგი V, იმერეთის ფაქტობრივი მეფე]]
 * [[გიორგი VI, მცირე]] - საქართველოს მეფე
 * [[გიორგი VI, იმერეთის მეფე]] - იმერეთის მეფე
 * [[გიორგი VII, ბაგრატ V-ის ძე]] - საქართველოს მეფე
@@ -37,7 +38,6 @@
 * [[გიორგი ბატონიშვილი, ალექსანდრე II-ის ვაჟი|გიორგი ბატონიშვილი]] - კახეთის სამეფოს პოლიტიკური მოღვაწე
 * [[გიორგი ბატონიშვილი, ვახტანგ VI-ის ძე|გიორგი ბატონიშვილი]] - მოსკოვის ქართული კოლონიის მეთაური
 * [[გიორგი ბატონიშვილი]] - იმერეთის მეფის სოლომონ I-ის შვილიშვილი
-* [[გიორგი V გურიელი]] - გურიის მთავარი
 * [[გიორგი დოდისი]] - კალიგრაფი
 * [[გიორგი მაწყვერელი (VIII-IX სს.)]] - აწყურის ეპისკოპოსი დაახლოებით VIII-IX საუკუნეებში
 * [[გიორგი მაწყვერელი]] - აწყურის ეპისკოპოსი X საუკუნის I მესამედში
