*Empty MediaWiki Message*

--- a/გოჭა_(ფრინველი).mw
+++ b/გოჭა_(ფრინველი).mw
@@ -1,7 +1,8 @@
 {|border=0 cellpadding=10 width=100%
-|- bgcolor=silver
-|ტერმინს "'''გოჭა'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გოჭა]]
-|}
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გოჭა'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გოჭა]]
+|}</small>
+
 
 '''გოჭა''' (Gallinago media), [[ფრინველები|ფრინველი]] [[მეჭვავიასნაირნი|მეჭვავიასნაირთა]] რიგისა. აქვს 35 სმ სიგრძის სხეული, 200 გრამამდე წონა, მურა ფერის ბულბული მუქი ხაზებით. გავრცელებულია ევროპასა და ჩრდილოეთ აზიაში, ყოფილ სსრკ-ში - დასავლეთ საზღვრიდან ენისეიმდე და სამხრეთ ტუნდრიდან ტყე-სტეპის ზონამდე. საქართველოში გვხვდება მიმოფრენის დროს. ბუდეს ჭაობიან ადგილებში მიწაზე იკეთებს. დებს 4 მსხვილ, დაწინწკლულ კვერცხს. იკვებება მწერების მატლებით, ჭიებით და ლოკოკინებით, რითაც სარგებლობა მოაქვს მეურნეობისათვის. გოჭა სპორტული ნადირობის ობიექტია.
 
