--- a/კობრი.mw
+++ b/კობრი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გოჭა'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გოჭა]]
+|}</small>
+
 [[სურათი:250px-Karpfen wiki.jpg|thumb|right|Cyprinus carpio morpha noblis]]
 '''გოჭა''', ''კობრი''  (Cyprinus carpio), [[თევზები|თევზი]] [[კობრისებრნი|კობრისებრთა]] ოჯახისა.
 
