*Empty MediaWiki Message*

--- a/გრიგოლ_ბაკურიანის_ძე.mw
+++ b/გრიგოლ_ბაკურიანის_ძე.mw
@@ -1,4 +1,9 @@
-'''გრიგოლ ბაკურიანის ძე''' († [[1086]]), XI საუკუნის[[ ქართველები|ქართველი]] პოლიტიკური მოღვაწე, [[ბიზანტიის იმპერია|ბიზანტიის იმპერიის]] ჯერ აღმოსავლეთის, მერე დასავლეთის დომესტიკოსი, სევასტოსი. ძე ერისთავთერისთავ ბაკურიანისა. 
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გრიგოლ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გრიგოლ]]
+|}</small>
+
+'''გრიგოლ ბაკურიანის ძე''' († [[1086]]), XI საუკუნის [[ქართველები|ქართველი]] პოლიტიკური მოღვაწე, [[ბიზანტიის იმპერია|ბიზანტიის იმპერიის]] ჯერ აღმოსავლეთის, მერე დასავლეთის დომესტიკოსი, სევასტოსი. ძე ერისთავთერისთავ ბაკურიანისა. 
 
 მისი სამშობლო - იმიერ [[ტაო]], [[დავით III]] დიდი კურაპალატის გარდაცვალების შემდეგ ბიზანტიის პოლიტიკურ საზღვრებში მოექცა. სხვადასხვა დროს მსახურობდა სომხეთში, იბერიასა (ტაოში) და სირიაში. იყო კარისა (ყარსის) და თეოდოსიოპოლის (კარნუქალაქის) განმგებელი. [[ალფ-არსლანი|ალფ-არსლანის]] შემოსევების დროს ([[1064]]) ანისის დაცვის ერთ-ერთი ხელმძღვანელი იყო. [[1072]]-[[1073]] საქართველოს მეფე  [[გიორგი II, საქართველოს მეფე|გიორგი II-ს]] გადასცა კარის ციხე-ქალაქი და მისი მიმდგომი ქვეყანა. 1081 მისი ხელშეწყობით ბიზანტიის საიმპერატორო კარზე მოხდა გადატრიალება, რის შედეგადაც [[ნიკიფორე III|ნიკიფორე III ბოტანიატე]] დაემხო  და ტახტი [[ალექსი I კომნენოსი|ალექსი I-მა კომნენოსმა]] დაიჭირა. გრიგოლის მამულები, რომლებსაც სრული საგადასახადო იმუნიტეტი ჰქონდა მინიჭებული, გაბნეული იყო იმპერიის სხვადასხვა მხარეში. [[1083]] გრიგოლ ბაკურიანის ძემ პეტრიწონში (ბაჩკოვო, ბულგარეთი) დაარსა ქართველთა მონასტერი ([[პეტრიწონის მონასტერი]]), რომელსაც დიდძალი უძრავ-მოძრავი ქონება დაუმკვიდრა, მონასტერს შეუდგინა "ტიპიკონი" ანუ წესდება, რომელიც XI საუკუნის II ნახევრის საქართველოს, ბულგარეთისა და საბერძნეთის ისტორიის საყურადღებო წყაროა.  "ტიპიკონის" XIII საუკუნეში გადაწერილმა ბერძნულმა და ქართულმა ნუსხებმა ჩვენამდე მოაღწიეს. გრიგოლ ბაკურიანის ძე დაიღუპა პაჭანიკებთან ბრძოლაში.
 
