*Empty MediaWiki Message*

--- a/გრიგოლ_დოდორქელი.mw
+++ b/გრიგოლ_დოდორქელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გრიგოლ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გრიგოლ]]
+|}</small>
+
 '''გრიგოლ დოდორქელი''' (ვახვახიშვილი), XVII-XVIII საუკუნეების [[ქართველები|ქართველი]] საეკლესიო მოღვაწე და მწერალი. [[დავითგარეჯა|დავითგარეჯის]] ლიტერატურული სკოლის აქტიური წევრი. 
 
 მოღვაწეობდა დოდორქის მონასტერში. [[1703]]-[[1713]] დაწერა [[ჰაგიოგრაფია|ჰაგიოგრაფიული]] თხზულება "თთუესა სეკდემბერსა იგ წამებაჲ ყოვლადდიდებულისა მოწამისა დედოფლისა ქეთევანისაჲ, რომელი იწამა სპარსთა მეფისა შაჰაბაზ უსჯულოჲსა მიერ ქალაქსა შირაზისასაჲ", რომელიც სანდო ისტორიული წყაროცაა.  გრიგოლ დოდორქელს ეკუთვნის რამდენიმე საგალობელიც. ზოგ მათგანში შექებულია [[ქეთევან დედოფალი]].
