*Empty MediaWiki Message*

--- a/გრიგოლი_(ქორეპისკოპოსი).mw
+++ b/გრიგოლი_(ქორეპისკოპოსი).mw
@@ -1,6 +1,12 @@
-'''გრიგოლი''', კახეთის პირველი მთავარი. VIII საუკუნის 80-იან წლებში გააერთიანა [[კახეთი]], [[კუხეთი]] და [[გარდაბანი]] და იწოდა კახთა მთავრად ანუ ქორეპისკოპოსად. ვახუშტის მიხედვით გრიგოლი მთავრობდა [[787]]-[[827]]. იგი აქტიურად მონაწილეობდა ქართულ სამეფო-სამთავროთა შორის პირველობისა და ბატონობისათვის ბრძოლაში. 
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გრიგოლ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გრიგოლ]]
+|}</small>
 
-IX საუკუნის დასაწყისში დაიპყრო შიდა ქართლის ნაწილი. გრიგოლის წინააღმდეგ გაილაშქრეს [[ტაო|ტაო]]-[[კლარჯეთი|კლარჯეთის]] დიდმა მთავარმა [[აშოტ I დიდი|აშოტ I ]] კურაპალატმა და აფხაზთა მეფე [[თეოდოს II|თეოდოს II-მ]]. გრიგოლს ეხმარებოდნენ მთიელები, [[წანარები]] და [[თბილისი|თბილისის]] [[ამირა]]. ბრძოილა მდინარე ქსანზე მოხდა. გრიგოლი დამარცხდა  და მის მიერ დაპყრობილი შიდა ქართლის ნაწილი აშოტ კურაპალატმა დაისაკუთრა.
+'''გრიგოლი''', კახეთის პირველი მთავარი. VIII საუკუნის 80-იან წლებში გააერთიანა [[კახეთი]], [[კუხეთი]] და [[გარდაბანი]] და იწოდა კახთა მთავრად ანუ ქორეპისკოპოსად. [[ვახუშტი ბატონიშვილი|ვახუშტის]] მიხედვით გრიგოლი მთავრობდა [[787]]-[[827]]. იგი აქტიურად მონაწილეობდა ქართულ სამეფო-სამთავროთა შორის პირველობისა და ბატონობისათვის ბრძოლაში. 
+
+IX საუკუნის დასაწყისში დაიპყრო შიდა ქართლის ნაწილი. გრიგოლის წინააღმდეგ გაილაშქრეს [[ტაო|ტაო]]-[[კლარჯეთი|კლარჯეთის]] დიდმა მთავარმა [[აშოტ I დიდი|აშოტ I ]] კურაპალატმა და აფხაზთა მეფე [[თეოდოს II|თეოდოს II-მ]]. გრიგოლს ეხმარებოდნენ მთიელები, [[წანარები]] და [[თბილისი|თბილისის]] [[ამირა]]. ბრძოილა [[ქსანი|მდინარე ქსანზე]] მოხდა. გრიგოლი დამარცხდა  და მის მიერ დაპყრობილი შიდა ქართლის ნაწილი აშოტ კურაპალატმა დაისაკუთრა.
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:კახეთის მთავრები]]
