*Empty MediaWiki Message*

--- a/გრიგოლ_ოშკელი.mw
+++ b/გრიგოლ_ოშკელი.mw
@@ -1,4 +1,10 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გრიგოლ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გრიგოლ]]
+|}</small>
+
 '''გრიგოლი''', [[ოშკი|ოშკის ტაძრის]] მშენებელი, ცხოვრობდა X საუკუნეში, მოხსენებულია ტაძრის დამფუძნებლებთან - [[ბაგრატ ერისთავთერისთავი|ბაგრატ ერისთავთერისთავთან]] და [[დავით III|დავით მაგისტროსთან]] ერთად დიდ სამშენებლო წარწერაში. მუხლმოდრეკილი, ხელებაპყრობილი გრიგოლი გამოსახულია ტაძრის სამხრეთ გალერეაში, რელიეფებიან ბოძზე, ვედრების კომპოზიციის ქვეშ. [[თაყაიშვილი, ექვთიმე|ე. თაყაიშვილის]] აზრით, შესაძლებელია იგი გრიგოლ ღვთისმეტყველის ზოგიერთი ნაწარმოების მთარგმნელი, ისტორიაში ცნობილი გრიგოლ ოშკელი იყოს. გრიგოლის მიერ აგებული ტაძარი შუა საუკუნეების საქართველოს ერთ-ერთიუდიდესი საკულტო ნაგებობაა. ოსტატს გამოუყენებია ქართული ხუროთმოძღვრების ტრადიციული ფორმები, მაგრამ ეპოწის მოთხოვნილებისამებრ გადაუმუშავებია ისინი.
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი მშენებლები]]
